tests/snapshots/drift_autofix_snapshot_tests__drift_case_autoscaling_desired_capacity.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_autoscaling_group.app",
      "change": {
        "actions": [
          "update"
        ],
        "after": {
          "desired_capacity": 3,
          "max_size": 4,
          "min_size": 1
        },
        "before": {
          "desired_capacity": 2,
          "max_size": 4,
          "min_size": 1
        }
      },
      "mode": "managed",
      "name": "app",
      "type": "aws_autoscaling_group"
    }
  ]
}
