tests/snapshots/drift_autofix_snapshot_tests__drift_case_dynamodb_billing_mode.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_dynamodb_table.data",
      "change": {
        "actions": [
          "update"
        ],
        "after": {
          "billing_mode": "PAY_PER_REQUEST"
        },
        "before": {
          "billing_mode": "PROVISIONED",
          "read_capacity": 5,
          "write_capacity": 5
        }
      },
      "mode": "managed",
      "name": "data",
      "type": "aws_dynamodb_table"
    }
  ]
}
